# rpi_vehicle

./: .gitattributes  README.md
backup_src/: camera_control.py  motion_control.py  test.py
backup_src/templates/: index.html  streaming.html
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/include/common/: RemoteControlMsg.h
devel/lib/imu/: complementary_filter_node  imu_raw_node
devel/lib/interface/: image_capture  vehicle_controller
devel/lib/pkgconfig/: common.pc  imu.pc  interface.pc  server.pc
devel/share/common/cmake/: common-msg-extras.cmake  common-msg-paths.cmake  commonConfig.cmake
devel/share/imu/cmake/: imuConfig.cmake
devel/share/interface/cmake/: interfaceConfig.cmake
devel/share/roseus/ros/common/: manifest.l
devel/share/server/cmake/: serverConfig.cmake
docs/: Makefile  conf.py  make.bat
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
src/: 96-ballFollow.py  camera_control.py  camera_control_thread.py  main.py  servo_control.py  test.py  vechile_control.py  wifirobots.py
src/common/: CMakeLists.txt  package.xml
src/common/msg/: RemoteControlMsg.msg
src/imu/: CMakeLists.txt
src/imu/launch/: imu_launch
src/imu/src/: imu_raw_node.cpp
src/interface/: CMakeLists.txt  package.xml
src/interface/launch/: interface_launch
src/interface/src/: image_capture.cpp  vehicle_controller.cpp
src/lib/xr_servo_lib/: Servo_test.py
src/server/: CMakeLists.txt
src/server/src/: server_node.py  web_server.py
src/server/src/static/DataTables/: datatables.css  datatables.js  datatables.min.css  (+1 more)
src/server/src/templates/: dashboard.html
src/templates/: index.html
(+10 files in other folders)
