<?xml version="1.0"?>
<package format="2">
  <name>common</name>
  <version>1.0.0</version>
  <description>The common package includes some general message and information</description>

  <maintainer email="zhuanghany11@163.com">zhy</maintainer>

  <license>BSD</license>
 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>


  <export/>
</package>
